--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
     <link href="style.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
+    <script type="text/javascript" src="jquery-3.5.1.min.js"> </script>
+
 </head>
 <body>
     <div class="flex justify-center rounded-xl" id="bg">
-        <div id="b" class="mt-10 mr-8">
-            <img src="/Asset 4 1.png" class="w-60" >
-        </div>
-        <div class="mt-8">
-            <img src="/How well do you think you understand the position now that you've been hired_.png" class="w-80">
-            <div class="flex p-2">
-                <a href="#"><img src="/had no trouble comprehending the position..png" class="p-4 w-32 mr-6 bg-gray-300 rounded-xl outline outline-1 outline-black" ></a>
-                <a href="#"><img src="/Most of the job was clear to me..png" class="p-4 w-32 bg-gray-300 mr-6 rounded-xl outline outline-1 outline-black" ></a>
-                <a href="#"><img src="/I recognized the essentials of the position..png" class="p-4 w-32 mr-6 bg-gray-300 rounded-xl outline outline-1 outline-black" ></a>
+        <img src="/Asset 4 1.png" width="30%" class="ml-24">
+        <div class="mt-8 ml-40">
+            <h1 class="text-3xl font-semibold">How well do you think you <p class="text-teal-600">understand the position</p> now that you've been hired?</h1>
+            <div class="flex p-2" id="home">
+                <p id="p1" class="text-sm pl-2 pr-2 pt-2 pb-2  w-28  mr-6 bg-gray-300 rounded-xl outline outline-1 outline-black">had no trouble comprehending the position.</p>
+                <p id="p2" class="text-sm pl-2 pr-2 pt-2 pb-2 w-28  mr-6 bg-gray-300 rounded-xl outline outline-1 outline-black">Most of the job was clear to me.</p>
+                <p id="p3" class="text-sm pl-2 pr-2 pt-2 pb-2 w-28  mr-6 bg-gray-300 rounded-xl outline outline-1 outline-black">I recognized the essentials of the position.</p>
                 </div>
-                <div class="flex flex-wrap p-2">
-                    <a href="#"><img src="/Most of the aspects of the function eluded me..png" class="pl-4 pr-4 pt-2 pb-2 w-32 mr-6 bg-gray-300 rounded-xl outline outline-1 outline-black"></a>
-                        <a href="#"> <img src="/I had no idea what the role entailed..png" class="pl-4 pr-4 pt-4 pb-4 w-28  mr-6 bg-gray-300 rounded-xl outline outline-1 outline-black" ></a>
+                <div class="flex flex-wrap p-2" id="links">
+                   <p id="p4" class="text-sm pl-2 pr-2 pt-2 pb-2 w-28  mr-6 bg-gray-300 rounded-xl outline outline-1 outline-black">Most aspects of function eluded me.</p>
+                   <p id="p5" class="text-sm pl-2 pr-2 pt-2 pb-2 w-28  mr-6 bg-gray-300 rounded-xl outline outline-1 outline-black">I had no idea what the role entailed.</p>
             </div>
-            <a href="#"><img src="/Group 2 (1).png" class="w-60 mb-8 mt-4"></a>
+            <a href="#"><button class="m-2 outline outlibne-2 outline-blue-900 text-blue-900 text-xs rounded-2xl p-2">CLICK TO SELECT THE DESIRED ANSWER</button></a>
         </div>
     </div>
+    
 </body>
 </html>
